--- a/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zwavejs2mqtt/helm-release.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: zwavejs2mqtt
-  namespace: default
+  namespace: home
 spec:
   interval: 5m
   chart:
