disable geoip for now

--- a/cluster/apps/security/authentik/helm-release.yaml
+++ b/cluster/apps/security/authentik/helm-release.yaml
@@ -39,8 +39,7 @@ spec:
         - authentik.${SECRET_DOMAIN}
 
     geoip:
-      enabled: true
-      accountId: ${SECRET_AUTHENTIK_MAXMIND_ACCOUNT_ID}
+      enabled: false
     authentik:
       email:
         host: smtp.${SECRET_DOMAIN}
