--- a/cluster/apps/network/adguard/helm-release.yaml
+++ b/cluster/apps/network/adguard/helm-release.yaml
@@ -54,46 +54,51 @@ spec:
       PUID: "1000"
       PGID: "1000"
     service:
-      port:
-        port: 3000
-      additionalServices:
-      - enabled: true
-        nameSuffix: dns-tcp
+      main: 
+        port:
+          port: 3000
+      dns-tcp:
+        enabled: true
         type: LoadBalancer
         externalIPs:
         - "${SVC_ADGUARD_ADDRESS}"
+        externalTrafficPolicy: Local
         port:
           port: 53
           name: dns-tcp
           protocol: TCP
           targetPort: 53
-        externalTrafficPolicy: Local
-      - enabled: true
+
+      dns-udp:
+        enabled: true
         nameSuffix: dns-udp
         type: LoadBalancer
         externalIPs:
         - "${SVC_ADGUARD_ADDRESS}"
+        externalTrafficPolicy: Local
         port:
           port: 53
           name: dns-udp
           protocol: UDP
           targetPort: 53
-        externalTrafficPolicy: Local
+        
     ingress:
-      enabled: true
-      annotations:
-        kubernetes.io/ingress.class: "nginx"
-        # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
-      hosts:
-      # - host: "dns01.network.${SECRET_DOMAIN}"
-      - host: "adguard.${SECRET_DOMAIN}"
-        paths:
-        - path: /
-          pathType: Prefix
-      tls:
-      - hosts:
-        - "adguard.${SECRET_DOMAIN}"
-        # - "dns01.network.${SECRET_DOMAIN}"
+      main:
+        enabled: true
+        ingressClassName: "nginx"
+        # annotations:
+        #   kubernetes.io/ingress.class: "nginx"
+        #   # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+        hosts:
+        # - host: "dns01.network.${SECRET_DOMAIN}"
+        - host: "adguard.${SECRET_DOMAIN}"
+          paths:
+          - path: /
+            pathType: Prefix
+        tls:
+        - hosts:
+          - "adguard.${SECRET_DOMAIN}"
+          # - "dns01.network.${SECRET_DOMAIN}"
     resources:
       requests:
         memory: 1000Mi
