--- a/cluster/apps/home/zigbee2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zigbee2mqtt/helm-release.yaml
@@ -47,6 +47,11 @@ spec:
         enabled: true
         existingClaim: zigbee2mqtt-pvc
         mountPath: /data
+      usb:
+        enabled: true
+        type: hostPath
+        hostPath: /dev/serial/by-id/usb-Texas_Instruments_TI_CC2531_USB_CDC___0X00124B0014D9E1BE-if00
+        hostPathType: CharDevice
     config:
       mqtt:
         base_topic: zigbee2mqtt
@@ -84,13 +89,6 @@ spec:
         new_api: true
     securityContext:
       privileged: true
-    additionalVolumeMounts:
-    - name: usb
-      mountPath: /dev/serial/by-id/usb-Texas_Instruments_TI_CC2531_USB_CDC___0X00124B0014D9E1BE-if00
-    additionalVolumes:
-    - name: usb
-      hostPath:
-        path: /dev/serial/by-id/usb-Texas_Instruments_TI_CC2531_USB_CDC___0X00124B0014D9E1BE-if00
     affinity:
       nodeAffinity:
         requiredDuringSchedulingIgnoredDuringExecution:
