add proper baseURL to env variables

--- a/cluster/apps/home/mealie/helm-release.yaml
+++ b/cluster/apps/home/mealie/helm-release.yaml
@@ -24,6 +24,7 @@ spec:
     env:
       TZ: "America/New_York"
       DEFAULT_EMAIL: ryan@ryanholt.net
+      BASE_URL: https://mealie.${SECRET_DOMAIN}
     ingress:
       main:
         enabled: true
