--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -8,9 +8,14 @@ data:
   # Router Gateway IP
   GATEWAY_IP: "10.20.0.1"
   # Service IPs
+  SVC_NGINX_ADDRESS: "10.45.10.10"
+  SVC_VERNEMQ_ADDRESS: "10.45.10.11"
+  SVC_GITEA_ADDRESS: "10.45.10.12"
   SVC_ADGUARD_ADDRESS: "10.45.10.13"
+  SVC_INFLUXDB_ADDRESS: "10.45.10.15"
+  SVC_LOKI_ADDRESS: "10.45.10.16"
+  SVC_RESILIO_SYNC_ADDRESS: "10.45.10.18"
   SVC_COREDNS_ADDRESS_EXTERNAL: "10.45.10.53"
   SVC_COREDNS_ADDRESS_INTERNAL: "10.43.10.53"
   SVC_PLEX_ADDRESS: "10.45.100.100"
   SVC_QBITTORRENT_ADDRESS: "10.20.50.157"
-  SVC_VERNEMQ_ADDRESS: "10.45.10.11"
