--- a/cluster/apps/collab/gitea/helm-release.yaml
+++ b/cluster/apps/collab/gitea/helm-release.yaml
@@ -39,16 +39,31 @@ spec:
         - "git.${SECRET_DOMAIN}"
         secretName: gitea-cert
     service:
+      annotations:
+        prometheus.io/probe: "true"
+        prometheus.io/protocol: "tcp"
+      http:
+        port: 3000
       ssh:
-        type: ClusterIP
-        # externalTrafficPolicy: Local
+        type: LoadBalancer
+        port: 22
+        externalTrafficPolicy: Local
+        externalIPs:
+        - "${SVC_GITEA_ADDRESS}"
     gitea:
       admin:
+        email: ${SECRET_GITEA_ADMIN_EMAIL}
         username: "ryan"
+        password: ${SECRET_GITEA_ADMIN_PASSWORD}
+      security:
+        SECRET_KEY: "${SECRET_GITEA_SECRET_KEY}"
       config:
-        server:
-          root_url: "https://git.${SECRET_DOMAIN}"
         APP_NAME: "Home Gitea"
+        server:
+          SSH_PORT: 22
+          SSH_LISTEN_PORT: 22
+          SSH_DOMAIN: git.${SECRET_DOMAIN}
+          root_url: "https://git.${SECRET_DOMAIN}"
         respository:
           DEFAULT_PRIVATE: true
         admin:
@@ -77,7 +92,3 @@ spec:
         serviceMonitor:
           enabled: true
           namespace: default
-  valuesFrom:
-  - kind: Secret
-    name: "gitea-helm-values"
-    optional: false
