--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -10,61 +10,14 @@ spec:
     spec:
       # renovate: registryUrl=https://prometheus-community.github.io/helm-charts
       chart: kube-prometheus-stack
-      version: 16.8.0
+      version: 16.12.0
       sourceRef:
         kind: HelmRepository
         name: prometheus-community-charts
         namespace: flux-system
       interval: 5m
   values:
-    fullnameOverride: x
-    # defaultRules:
-    #   rules:
-    #     kubeApiserverAvailability: false
-    #     kubeApiserver: false
-    server:
-      resources:
-        requests:
-          memory: 1500Mi
-          cpu: 25m
-        limits:
-          memory: 2000Mi
-    prometheusOperator:
-      createCustomResource: false
-      prometheusConfigReloaderImage:
-        repository: quay.io/prometheus-operator/prometheus-config-reloader
-        tag: v0.48.1
-      configmapReloadImage:
-        repository: docker.io/jimmidyson/configmap-reload
-        tag: v0.5.0
     alertmanager:
-      alertmanagerSpec:
-        externalUrl: "prom-alert.${SECRET_DOMAIN}"
-        storage:
-          volumeClaimTemplate:
-            spec:
-              storageClassName: rook-ceph-block
-              resources:
-                requests:
-                  storage: 10Gi
-        tolerations:
-        - key: "arm"
-          operator: "Exists"
-      ingress:
-        enabled: true
-        pathType: Prefix
-        ingressClassName: "nginx"
-        annotations:
-          kubernetes.io/tls-acme: "true"
-          cert-manager.io/cluster-issuer: letsencrypt-production
-          nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
-          nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/start?rd=$escaped_request_uri"
-        hosts:
-        - "prom-alert.${SECRET_DOMAIN}"
-        tls:
-        - hosts:
-          - "prom-alert.${SECRET_DOMAIN}"
-          secretName: alertmanager-cert
       config:
         global:
           slack_api_url: "${SECRET_ALERT_MANAGER_DISCORD_WEBHOOK}"
@@ -108,6 +61,29 @@ spec:
           target_match:
             severity: 'warning'
           equal: ['alertname', 'namespace']
+      ingress:
+        enabled: true
+        pathType: Prefix
+        ingressClassName: "nginx"
+        annotations:
+          kubernetes.io/tls-acme: "true"
+          cert-manager.io/cluster-issuer: letsencrypt-production
+          nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
+          nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/start?rd=$escaped_request_uri"
+
+        hosts:
+        - "alert-manager.${SECRET_DOMAIN}"
+        tls:
+        - hosts:
+          - "alert-manager.${SECRET_DOMAIN}"
+      alertmanagerSpec:
+        storage:
+          volumeClaimTemplate:
+            spec:
+              storageClassName: "rook-ceph-block"
+              resources:
+                requests:
+                  storage: 1Gi
     nodeExporter:
       serviceMonitor:
         relabelings:
@@ -117,36 +93,27 @@ spec:
           sourceLabels:
           - __meta_kubernetes_pod_node_name
           targetLabel: kubernetes_node
+    grafana:
+      enabled: false
     kubelet:
+      enabled: true
       serviceMonitor:
         metricRelabelings:
         - action: replace
           sourceLabels:
           - node
           targetLabel: instance
-    grafana:
+    kubeApiServer:
+      enabled: true
+    kubeControllerManager:
+      enabled: false
+    kubeScheduler:
+      enabled: false
+    kubeProxy:
       enabled: false
     kubeEtcd:
       enabled: false
-    kubeControllerManager:
-      enabled: false
-      # endpoints:
-      # - 10.20.10.16
-    kubeScheduler:
-      enabled: false
-      # endpoints:
-      # - 10.20.10.16
-    kubeProxy:
-      enabled: false
-    prometheus-node-exporter:
-      fullnameOverride: node-exporter
-      tolerations:
-      - key: "arm"
-        operator: "Exists"
-      - key: "armhf"
-        operator: "Exists"
     prometheus:
-      fullnameOverride: prometheus
       ingress:
         enabled: true
         pathType: Prefix
@@ -161,7 +128,6 @@ spec:
         tls:
         - hosts:
           - "prom-server.${SECRET_DOMAIN}"
-          secretName: prom-cert
       prometheusSpec:
         externalUrl: "prom-server.${SECRET_DOMAIN}"
         # image:
@@ -194,11 +160,30 @@ spec:
           objectStorageConfig:
             name: thanos-objstore-secret
             key: objstore.yml
+        additionalScrapeConfigs:
+        - job_name: 'netdata-scrape'
+          metrics_path: "/api/v1/allmetrics"
+          params:
+            format: [prometheus_all_hosts]
+          honor_labels: true
+          static_configs:
+          - targets:
+            - nas-0.${SECRET_DOMAIN}:19999
+            - nas-1.${SECRET_DOMAIN}:19999
+        - job_name: 'node-exporter'
+          static_configs:
+          - targets:
+            - fw.${SECRET_DOMAIN}:9100
+        - job_name: 'home-assistant'
+          scrape_interval: 60s
+          metrics_path: '/api/prometheus'
+          bearer_token: '$HASS_PROMETHEUS_TOKEN'
+          scheme: http
+          static_configs:
+          - targets:
+            - home-assistant.home.svc:8123
+
       thanosService:
         enabled: true
     kube-state-metrics:
       fullnameOverride: kube-state-metrics
-  valuesFrom:
-  - kind: Secret
-    name: "kube-prometheus-stack-helm-values"
-    optional: false
