add secret for bearer_token to hass

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -30,14 +30,15 @@ stringData:
   SECRET_GITEA_ADMIN_PASSWORD: ENC[AES256_GCM,data:YhvWtJjzeDncn/16O1ji,iv:xWvya2BIh6OP5oaFWjqyiyK51L94OITBt7fVwxAr4KQ=,tag:RuaALZeX4djItrHtGbr4mg==,type:str]
   SECRET_GITEA_ADMIN_EMAIL: ENC[AES256_GCM,data:cm7eSI69tJf2zzjYotnULY8=,iv:gLY7La5FboywujgxyWEL6gMUBeave+uw5vUgBcL/iOw=,tag:DEGia3YHswZa1ZbkVWZOxQ==,type:str]
   SECRET_GITEA_SECRET_KEY: ENC[AES256_GCM,data:gfC2QwguiXDhip5GrGVSIlt7yx4vUczJdmEgqXqR,iv:3LbbpnJv9qVys5X8DxhdiXtj+hCAF2el3txNcqCJSEw=,tag:CLphso2WhLXQh1nCDM9wwQ==,type:str]
+  SECRET_HASS_PROMETHEUS_TOKEN: ENC[AES256_GCM,data:G3V+BAlnQmTZGuswGfXTMdFQ7Qi1Qs+qyrmx2Yq+fXlkuZ07MMqJpMRmZ6Tirkcy3aFTCJFBtKfiUx+pmVM5YlV7weABHBfmMkyA5LwMudljPoI+5dJ526iI0FmlwKgvxMQ7lrmDwkc00ycQNME/9vwcC1fb3mrg51ao/sDtJTVb2EqBb/8V/BNLYbNjNa8zb0c/PnNDS6PZmeiMhW68lCpaTLuBWfye38Of6jSvZnuoLLoGA3Vq,iv:h5SDqo8FbEuzTqAc1ps4kyTYAn9OR9IQsEWTef2yeao=,tag:RkcA5HOXQnsfo9eFkeZXNg==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-06-28T18:39:15Z"
-  mac: ENC[AES256_GCM,data:3TQg2/LI7aV1u3N8KPgFaM4SjCIZFX2j75gGDE0Ft2j9SSxn6p6VBBaIDOnC2UwmTlL7C+nmz/UNAB4rvp96FUNio/eyBtF/CpYSQgYWAGE0WOOgz3GF8wIKa7trjdZDipkR9wIPwiqsppqVg3A663Pt0cILIaQ6kn92sW1SJKg=,iv:D3SedryWUJQ2r2BWD462lEwzCwtbbJ0LZHqlTW/dKdU=,tag:p5ddCAVsi8s+WPU/F/wpzg==,type:str]
+  lastmodified: "2021-06-28T19:48:48Z"
+  mac: ENC[AES256_GCM,data:07BJtSaSlJ01+7Mb2r4Z4WwWq+bB37xzfbJ2olDnTpf7h7wjdEwu6RVTFk4n+OK/mwAr65EYwygXzMVpHynIFdC8u7pkq4yI+38Nf+a+uJwKIRxiqtLeWsVMwbhvYgb0o8ifSyM6648xFOIWghZVHoYunncR26kb4+mo1j2AEyU=,iv:ES2wQwyrXf1PlN5C7yHo/vIeHiLbowOamdQpYuPAyak=,tag:yMSXNk54yP9qjQAtAjyJzw==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
