--- a/cluster/apps/media/tautulli/helm-release.yaml
+++ b/cluster/apps/media/tautulli/helm-release.yaml
@@ -24,18 +24,19 @@ spec:
     env:
       TZ: "America/New_York"
     ingress:
-      enabled: true
-      annotations:
-        external-dns.alpha.kubernetes.io/target: 10.20.0.2
-        kubernetes.io/ingress.class: "nginx"
-      hosts:
-      - host: "tautulli.${SECRET_DOMAIN}"
-        paths:
-        - path: /
-          pathType: Prefix
-      tls:
-      - hosts:
-        - "tautulli.${SECRET_DOMAIN}"
+      main:
+        enabled: true
+        annotations:
+          external-dns.alpha.kubernetes.io/target: 10.20.0.2
+          kubernetes.io/ingress.class: "nginx"
+        hosts:
+        - host: "tautulli.${SECRET_DOMAIN}"
+          paths:
+          - path: /
+            pathType: Prefix
+        tls:
+        - hosts:
+          - "tautulli.${SECRET_DOMAIN}"
     persistence:
       config:
         enabled: true
