--- a/cluster/apps/media/sabnzbd/helm-release.yaml
+++ b/cluster/apps/media/sabnzbd/helm-release.yaml
@@ -24,26 +24,27 @@ spec:
     env:
       TZ: "America/New_York"
     ingress:
-      enabled: true
-      annotations:
-        external-dns.alpha.kubernetes.io/target: 10.20.0.2
-        kubernetes.io/ingress.class: "nginx"
-        kubernetes.io/tls-acme: "true"
-        cert-manager.io/cluster-issuer: letsencrypt-production
-        nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
-        nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/start"
-      hosts:
-      - host: "sabnzbd.${SECRET_DOMAIN}"
-        paths:
-        - path: /
-          pathType: Prefix
-      tls:
-      - hosts:
-        - "sabnzbd.${SECRET_DOMAIN}"
-        secretName: sabnzbd-cert
-      additionalIngresses:
-      - enabled: true
-        nameSuffix: "api"
+      main:
+        enabled: true
+        ingressClassName: "nginx"
+        annotations:
+          kubernetes.io/ingress.class: "nginx"
+          kubernetes.io/tls-acme: "true"
+          cert-manager.io/cluster-issuer: letsencrypt-production
+          nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
+          nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/start"
+        hosts:
+        - host: "sabnzbd.${SECRET_DOMAIN}"
+          paths:
+          - path: /
+            pathType: Prefix
+        tls:
+        - hosts:
+          - "sabnzbd.${SECRET_DOMAIN}"
+          secretName: sabnzbd-cert
+      api:
+        enabled: true
+        ingressClassName: "nginx"
         annotations:
           kubernetes.io/ingress.class: "nginx"
         hosts:
@@ -59,14 +60,10 @@ spec:
       config:
         enabled: true
         existingClaim: sabnzbd-pvc
-    additionalVolumeMounts:
-    - name: data
-      mountPath: /data
-      subPath: sabnzbd
-    additionalVolumes:
-    - name: data
-      persistentVolumeClaim:
-        claimName: media-nfs-tank-share-pvc
+      data:
+        enabled: true
+        existingClaim: media-nfs-tank-share-pvc
+        mountPath: /data
     podAnnotations:
       cni.projectcalico.org/ipAddrs: "[\"10.42.45.10\"]"
     resources:
