--- a/cluster/apps/media/overseerr/helm-release.yaml
+++ b/cluster/apps/media/overseerr/helm-release.yaml
@@ -26,23 +26,22 @@ spec:
       TZ: "America/New_York"
       LOG_LEVEL: "info"
     ingress:
-      enabled: true
-      annotations:
-        external-dns.alpha.kubernetes.io/target: 10.20.0.2
-        kubernetes.io/ingress.class: "nginx"
-        kubernetes.io/tls-acme: "true"
-        cert-manager.io/cluster-issuer: letsencrypt-production
-      hosts:
-      - host: "requests.${SECRET_DOMAIN}"
-        paths:
-        - path: /
-          pathType: Prefix
-      tls:
-      - hosts:
-        - "requests.${SECRET_DOMAIN}"
-        secretName: overseerr-cert
-    podAnnotations:
-      backup.velero.io/backup-volumes: config
+      main:
+        enabled: true
+        annotations:
+          external-dns.alpha.kubernetes.io/target: 10.20.0.2
+          kubernetes.io/ingress.class: "nginx"
+          kubernetes.io/tls-acme: "true"
+          cert-manager.io/cluster-issuer: letsencrypt-production
+        hosts:
+        - host: "requests.${SECRET_DOMAIN}"
+          paths:
+          - path: /
+            pathType: Prefix
+        tls:
+        - hosts:
+          - "requests.${SECRET_DOMAIN}"
+          secretName: overseerr-cert
     persistence:
       config:
         enabled: true
