--- a/cluster/apps/media/nzbhydra/helm-release.yaml
+++ b/cluster/apps/media/nzbhydra/helm-release.yaml
@@ -27,21 +27,22 @@ spec:
       startup:
         enabled: true
     ingress:
-      enabled: true
-      annotations:
-        external-dns.alpha.kubernetes.io/target: 10.20.0.2
-        kubernetes.io/ingress.class: "nginx"
-        kubernetes.io/tls-acme: "true"
-        cert-manager.io/cluster-issuer: letsencrypt-production
-      hosts:
-      - host: "nzbhydra.${SECRET_DOMAIN}"
-        paths:
-        - path: /
-          pathType: Prefix
-      tls:
-      - hosts:
-        - "nzbhydra.${SECRET_DOMAIN}"
-        secretName: nzbhydra-cert
+      main:
+        enabled: true
+        annotations:
+          external-dns.alpha.kubernetes.io/target: 10.20.0.2
+          kubernetes.io/ingress.class: "nginx"
+          kubernetes.io/tls-acme: "true"
+          cert-manager.io/cluster-issuer: letsencrypt-production
+        hosts:
+        - host: "nzbhydra.${SECRET_DOMAIN}"
+          paths:
+          - path: /
+            pathType: Prefix
+        tls:
+        - hosts:
+          - "nzbhydra.${SECRET_DOMAIN}"
+          secretName: nzbhydra-cert
     persistence:
       config:
         enabled: true
