--- a/cluster/apps/media/jackett/helm-release.yaml
+++ b/cluster/apps/media/jackett/helm-release.yaml
@@ -26,19 +26,20 @@ spec:
       PUID: 1000
       PGID: 1000
     ingress:
-      enabled: true
-      annotations:
-        external-dns.alpha.kubernetes.io/target: 10.20.0.2
-        kubernetes.io/ingress.class: "nginx"
-      hosts:
-      - host: "jackett.${SECRET_DOMAIN}"
-        paths:
-        - path: /
-          pathType: Prefix
-      tls:
-      - hosts:
-        - "jackett.${SECRET_DOMAIN}"
-        secretName: jackett-cert
+      main:
+        enabled: true
+        annotations:
+          external-dns.alpha.kubernetes.io/target: 10.20.0.2
+          kubernetes.io/ingress.class: "nginx"
+        hosts:
+        - host: "jackett.${SECRET_DOMAIN}"
+          paths:
+          - path: /
+            pathType: Prefix
+        tls:
+        - hosts:
+          - "jackett.${SECRET_DOMAIN}"
+          secretName: jackett-cert
     persistence:
       config:
         enabled: true
