--- a/cluster/apps/network/dns-update/kustomization.yaml
+++ b/cluster/apps/network/dns-update/kustomization.yaml
@@ -2,9 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- adguard
-- certificates
-# - coredns
-# - external-dns
-- unifi
-- dns-update
+- dns-update.enc.yaml
+- cron-job.yaml
